testsuite/tests/parser/should_fail/T14740.hs
{-# LANGUAGE UnboxedTuples #-}

module T14740 where

x :: ((##)) => ()
x = ()
